--- a/custom_components/versatile_thermostat/translations/pl.json
+++ b/custom_components/versatile_thermostat/translations/pl.json
@@ -93,7 +93,13 @@
       },
       "type": {
         "title": "Encje powiązane",
-        "description": "Atrybuty encji powiązanych&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/pl/over-switch.md#configuration)",
+        "description": "Atrybuty encji powiązanych {over_switch_doc}",
+        "description_placeholders": {
+          "over_switch_doc": {
+            "text": "dokumentacja",
+            "url": "https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/pl/over-switch.md#configuration"
+          }
+        },
         "data": {
           "underlying_entity_ids": "Sterowane urządzenia",
           "heater_keep_alive": "Czas podtrzymania (w sek.)",
@@ -430,7 +436,13 @@
       },
       "type": {
         "title": "Encje - {name}",
-        "description": "Atrybuty encji powiązanych&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/pl/over-switch.md#configuration)",
+        "description": "Atrybuty encji powiązanych {over_switch_doc}",
+        "description_placeholders": {
+          "over_switch_doc": {
+            "text": "dokumentacja",
+            "url": "https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/pl/over-switch.md#configuration"
+          }
+        },
         "data": {
           "underlying_entity_ids": "Sterowane urządzenie(-a)",
           "heater_keep_alive": "Czas podtrzymania (w sek.)",
