--- a/custom_components/versatile_thermostat/translations/cs.json
+++ b/custom_components/versatile_thermostat/translations/cs.json
@@ -94,7 +94,13 @@
       },
       "type": {
         "title": "Propojené entity",
-        "description": "Atributy propojených entit&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/cs/over-switch.md#configuration)",
+        "description": "Atributy propojených entit {over_switch_doc}",
+        "description_placeholders": {
+          "over_switch_doc": {
+            "text": "dokumentace",
+            "url": "https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/cs/over-switch.md#configuration"
+          }
+        },
         "data": {
           "underlying_entity_ids": "Zařízení, která mají být řízena",
           "heater_keep_alive": "Interval keep-alive spínače v sekundách",
@@ -421,7 +427,13 @@
       },
       "type": {
         "title": "Entity - {name}",
-        "description": "Atributy propojených entit&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/cs/over-switch.md#configuration)",
+        "description": "Atributy propojených entit {over_switch_doc}",
+        "description_placeholders": {
+          "over_switch_doc": {
+            "text": "dokumentace",
+            "url": "https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/cs/over-switch.md#configuration"
+          }
+        },
         "data": {
           "underlying_entity_ids": "Zařízení, která mají být řízena",
           "heater_keep_alive": "Interval keep-alive spínače v sekundách",
